--- a/auth_hub/templates/dashboard.html
+++ b/auth_hub/templates/dashboard.html
@@ -94,6 +94,13 @@
                     <i class="bi bi-clock-history"></i> Upload History
                 </a>
             </li>
+                        
+            <li><hr class="dropdown-divider"></li>
+            <li>
+                <a class="dropdown-item" href="{% url 'asda_scraper:dashboard' %}">
+                    <i class="bi bi-robot"></i> ASDA Scraper
+                </a>
+            </li>
         </ul>
     </li>
 {% endif %}
